# spacepaint

./: README.md  package-lock.json
backend/: Cargo.toml
backend/src/: main.rs  message.rs  state.rs
backend/src/state/: processing.rs  shader.wgsl
frontend/: about.html  index.html  index.js  package-lock.json  package.json  style.css
frontend/png-decoder/: Cargo.toml
frontend/png-decoder/src/: lib.rs
