[package]
name = "spacepaint-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = [
    "time",
    "sync",
    "rt-multi-thread",
    "macros",
] }
log = "0.4"
env_logger = "0.11"
futures = "0.3"
wgpu = "23.0.1"
image = { version = "0.25", features = ["png"] }
anyhow = "1.0"
serde = { version = "1.0.215", features = ["derive"] }
flexbuffers = "2.0.0"
