[package]
name = "png-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
flexbuffers = "2.0.0"
image = "0.25.5"
serde = { version = "1.0.215", features = ["derive"] }
wasm-bindgen = "0.2.99"
web-sys = { version = "0.3.76", features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
] }
